fixed another .breadcrumbs bug on mobile devices

--- a/#src/scss/style.sass
+++ b/#src/scss/style.sass
@@ -293,20 +293,19 @@
 					border-radius: 3px
 					z-index: -1
 
-		&:nth-child(2)
-			&::before
-				@media screen and (max-width: $media-sm)
-					content: ''
-					display: block
-					position: absolute
-					left: 0
-					width: 100%
-					height: 40px
-					background-color: #232428
-					border-radius: 3px
-					z-index: -1
+		&::before
+			@media screen and (max-width: $media-sm)
+				content: ''
+				display: block
+				position: absolute
+				left: 0
+				width: 100%
+				height: 40px
+				background-color: #232428
+				border-radius: 3px
+				z-index: -1
 
-		&:nth-child(3)
+		&:nth-child(n + 3)
 			@media screen and (max-width: $media-sm)
 				padding-right: 15px
 				flex-basis: 100%
